--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "https://github.com/mohdarish91055/react_calculator",
+  "homepage": "https://mohdarish91055.github.io/react_calculator",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
